--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
   Exclude:
     - db/schema.rb
     - bin/bundle
+  SuggestExtensions: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
