--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,3 +28,12 @@ Style/SymbolArray:
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
+    -
+Lint/MissingSuper:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
